[package]
name = "plancks"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Plancks is a high performance in-memory message bus"
license = "MIT"

[dev-dependencies]
criterion = "0.3"

[dependencies]

[[bench]]
name = "ring_buffer"
harness = false