[package]
name = "plancks"
version = "0.1.0"
authors = ["Gregory Langlais <general@gregorylanglais.com>"]
edition = "2018"
description = "Plancks is a high performance in-memory message bus"
license = "MIT"

[lib]
bench = false

[[bin]]
name = "main"
path = "src/main.rs"
bench = false

[dev-dependencies]
criterion = "0.3"

[dependencies]
arrayvec = "0.5.1"

[[bench]]
name = "ring_buffer"
harness = false